test/tests/stages/14_pointers/invalid_types/ternary_mixed_pointer_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  *
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(y)
  =
  const int(0)
  ;
  int
  *
  identifier(result)
  =
  const int(1)
  ?
  identifier(x)
  :
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
